<resources>
  <!-- General -->
  <string name="channel_name">TaskList</string>
  <string name="channel_description">Notifications from TaskList app.</string>

  <!-- Menu -->
  <string name="menu_action_task_lists_title">Task lists</string>
  <string name="menu_action_settings_title">Settings</string>

  <!-- Tasks -->
  <string name="tasks_activity_title">TaskList</string>
  <string name="tasks_item_add_description">Add task</string>
  <string name="tasks_editor_create_activity_title">New task</string>
  <string name="tasks_editor_update_activity_title" />
  <string name="tasks_editor_save_description">Save task</string>
  <string name="tasks_editor_delete_description">Delete task</string>
  <string name="tasks_editor_field_description_label">What is to be done?</string>
  <string name="tasks_editor_field_description_hint">Enter task here</string>
  <string name="tasks_editor_field_done_label">Task finished?</string>
  <string name="tasks_editor_field_due_label">Due date</string>
  <string name="tasks_editor_field_due_date_hint">Date not set</string>
  <string name="tasks_editor_field_due_time_hint">Time not set (all day)</string>
  <string name="tasks_editor_picker_dialog_yes_button">Ok</string>
  <string name="tasks_editor_picker_dialog_no_button">Cancel</string>
  <string name="tasks_editor_create_field_list_label">Add to list</string>
  <string name="tasks_editor_update_field_list_label">Task list</string>
  <string name="tasks_delete_dialog_title">Are you sure</string>
  <string name="tasks_delete_dialog_yes_button">Delete</string>
  <string name="tasks_delete_dialog_no_button">Cancel</string>

  <string name="task_list_none_name">None*</string>
  <string name="task_list_all_name">All*</string>
  <string name="task_list_finished_name">Finished*</string>

  <!-- Task lists -->
  <string name="task_lists_activity_title">Task lists</string>
  <string name="task_lists_item_add_description">Add task list</string>
  <string name="task_lists_item_edit_description">Edit task list</string>
  <string name="task_lists_item_delete_description">Delete task list</string>
  <string name="task_lists_item_tasks_count_zero">No tasks</string>
  <string name="task_lists_item_tasks_count">Tasks: %1$d</string>
  <string name="task_lists_item_overdue_tasks_count">(%1$d overdue)</string>
  <string name="task_lists_delete_dialog_title">Are you sure?</string>
  <string name="task_lists_delete_dialog_message">All tasks from the list will also be deleted.</string>
  <string name="task_lists_delete_dialog_yes_button">Delete</string>
  <string name="task_lists_delete_dialog_no_button">Cancel</string>
  <string name="task_lists_editor_create_dialog_title">New list</string>
  <string name="task_lists_editor_update_dialog_title">Edit list</string>
  <string name="task_lists_editor_dialog_field_name_hint">Enter list name</string>
  <string name="task_lists_editor_create_dialog_yes_button">Add</string>
  <string name="task_lists_editor_update_dialog_yes_button">Save</string>
  <string name="task_lists_editor_dialog_no_button">Cancel</string>

  <!-- Settings -->
  <string name="settings_activity_title">Settings</string>
  <string name="settings_category_general_title">General</string>
  <string name="settings_language_title">Language</string>
  <string name="settings_default_task_list_title">Default task list</string>
  <string name="settings_category_notifications_title">Notifications</string>
  <string name="settings_notifications_title">Notifications</string>
  <string name="settings_notifications_on">Enabled</string>
  <string name="settings_notifications_off">Disabled</string>
  <string name="settings_sound_title">Sound</string>
  <string name="settings_sound_on">Enabled</string>
  <string name="settings_sound_off">Disabled</string>
  <string name="settings_sound_file_title">Choose a sound</string>
  <string name="settings_sound_file_dialog_title">Choose a sound</string>
  <string name="settings_sound_file_no_value">Not set</string>
  <string name="settings_sound_file_value">%s</string>
  <string name="settings_vibration_title">Vibration</string>
  <string name="settings_vibration_on">Enabled</string>
  <string name="settings_vibration_off">Disabled</string>
  <string name="settings_day_summary_title">Day summary</string>
  <string name="settings_day_summary_on">Enabled</string>
  <string name="settings_day_summary_off">Disabled</string>
  <string name="settings_day_summary_time_title">Choose time</string>
  <string name="settings_day_summary_time_dialog_title">Choose a time</string>
  <string name="settings_day_summary_time_no_value">Not set</string>
  <string name="settings_day_summary_time_value">%s</string>
</resources>