<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true"
  android:orientation="vertical">

  <com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.TaskList.AppBarOverlay">

    <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="?attr/colorPrimary"
      app:popupTheme="@style/Theme.TaskList.PopupOverlay">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
          style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
          android:id="@+id/tasks_editor_activity_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/tasks_editor_update_activity_title"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:text="Title" />

        <ImageButton
          android:id="@+id/tasks_editor_save_button"
          android:layout_width="@dimen/button"
          android:layout_height="@dimen/button"
          android:layout_marginEnd="10dp"
          android:layout_marginRight="10dp"
          android:background="?attr/selectableItemBackgroundBorderless"
          android:contentDescription="@string/tasks_editor_save_description"
          android:src="@drawable/ic_save"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintRight_toLeftOf="@+id/tasks_editor_delete_button"
          app:layout_constraintTop_toTopOf="parent"
          app:tint="@color/white" />

        <ImageButton
          android:id="@+id/tasks_editor_delete_button"
          android:layout_width="@dimen/button"
          android:layout_height="@dimen/button"
          android:layout_marginEnd="10dp"
          android:layout_marginRight="10dp"
          android:background="?attr/selectableItemBackgroundBorderless"
          android:contentDescription="@string/tasks_editor_delete_description"
          android:src="@drawable/ic_delete"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:tint="@color/white" />

      </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>
  </com.google.android.material.appbar.AppBarLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="15dp">

    <TextView
      android:id="@+id/tasks_editor_field_description_label"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="25dp"
      android:text="@string/tasks_editor_field_description_label"
      android:textColor="@color/alert_blue"
      android:textSize="16sp" />

    <EditText
      android:id="@+id/tasks_editor_field_description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:focusable="true"
      android:focusableInTouchMode="true"
      android:hint="@string/tasks_editor_field_description_hint"
      android:importantForAutofill="no"
      android:inputType="text"
      android:paddingStart="5dp"
      android:paddingLeft="5dp"
      android:textSize="18sp"
      tools:ignore="RtlSymmetry" />

    <CheckBox
      android:id="@+id/tasks_editor_field_done"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/tasks_editor_field_done_label"
      android:textSize="18sp" />

    <!--    TODO-->
    <!--    <TextView-->
    <!--      android:id="@+id/tasks_editor_field_due_label"-->
    <!--      android:layout_width="match_parent"-->
    <!--      android:layout_height="wrap_content"-->
    <!--      android:layout_marginTop="25dp"-->
    <!--      android:text="@string/tasks_editor_field_due_label"-->
    <!--      android:textColor="@color/alert_blue"-->
    <!--      android:textSize="16sp" />-->

    <!--    TODO-->
    <!--    <DatePicker-->
    <!--      android:id="@+id/tasks_editor_field_due_date"-->
    <!--      android:layout_width="match_parent"-->
    <!--      android:layout_height="wrap_content"-->
    <!--      android:calendarViewShown="true"-->
    <!--      android:spinnersShown="false" />-->

    <!--    TODO-->
    <!--    <TimePicker-->
    <!--      android:id="@+id/tasks_editor_field_due_label_time"-->
    <!--      android:layout_width="match_parent"-->
    <!--      android:layout_height="wrap_content"-->
    <!--      app:title="@string/settings_day_summary_time_title"-->
    <!--      app:pref_hourFormat="h24"-->
    <!--      app:pref_summaryTimePattern="HH:mm"-->
    <!--      app:pref_summaryHasTime="@string/settings_day_summary_time_value"-->
    <!--      />-->

    <TextView
      android:id="@+id/tasks_editor_field_list_label"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="25dp"
      android:text="@string/tasks_editor_update_field_list_label"
      android:textColor="@color/alert_blue"
      android:textSize="16sp" />

    <Spinner
      android:id="@+id/tasks_editor_field_list_dropdown"
      android:layout_width="match_parent"
      android:layout_height="45dp" />

  </LinearLayout>
</LinearLayout>